# runv

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
data/: README.md
src/: app.rs  main.rs
src/file_handling/: file_handler.rs  file_picker.rs  mod.rs
src/telemetry/: mod.rs  telemetry.rs
src/ui/: file_picker.rs
tests/data/: README.md  sample.tcx
