[package]
name = "runv"
version = "0.0.1"
edition = "2021"

[dependencies]
zip = "2.2.2"
flate2 = "1.0.35"
opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["trace", "metrics", "logs"] }
opentelemetry-stdout = { version = "0.27.0", features = ["trace", "metrics", "logs"] }
opentelemetry-appender-tracing = "0.27.0"
tracing = "0.1"
tracing-subscriber = "0.3"