[package]
name = "runv"
version = "0.0.1"
edition = "2021"

[dependencies]
zip = "2.2.2"
flate2 = "1.0.35"
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["trace", "metrics", "logs"] }
opentelemetry-stdout = { version = "0.28", features = ["trace", "metrics", "logs"] }
opentelemetry-appender-tracing = "0.28"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.13"
tokio = { version = "1", features = ["full"] }