[package]
name = "runv"
version = "0.0.1"
edition = "2021"

[dependencies]
# file handling
zip = "2.2.2"
flate2 = "1.0.35"

# opentelemetry
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["trace", "metrics", "logs"] }
opentelemetry-stdout = { version = "0.28", features = ["trace", "metrics", "logs"] }
opentelemetry-appender-tracing = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.13"
tokio = { version = "1", features = ["full"] }

# egui
egui = "0.30.0"
eframe = { version = "0.30", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
serde = { version = "1", features = ["derive"] }
# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)